--- a/03_publish_and_subscribe/README
+++ b/03_publish_and_subscribe/README
@@ -12,3 +12,14 @@ That way we'll be able to run one receiver and direct the logs to disk; and at t
 another receiver and see the logs on the screen.
 
 Essentially, published log messages are going to be broadcast to all the receivers.
+
+The core idea in the messaging model in RabbitMQ is that the producer never sends any messages directly to a queue. Actually, quite often the producer doesn't even know if a message will be delivered to any queue at all.
+
+Instead, the producer can only send messages to an exchange.
+An exchange is a very simple thing.
+On one side it receives messages from producers and the other side it pushes them to queues.
+The exchange must know exactly what to do with a message it receives.
+Should it be appended to a particular queue?
+Should it be appended to many queues?
+Or should it get discarded.
+The rules for that are defined by the exchange type.
